Baby fix for aligning name on smaller screens

--- a/src/style.css
+++ b/src/style.css
@@ -65,6 +65,10 @@
           @media (max-width: 30rem) {
             inline-size: 100%;
           }
+
+          p {
+            inline-size: 100%;
+          }
         }
 
         a {
